[tool.poetry]
name = "test-core-docs"
version = "0.1.0"
description = "test core docs"
authors = ["Chandrika Sivaramakrishnan <chandrika@pnnl.gov>"]
readme = "README.md"
packages = [{include = "test_core_docs"}]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = ">=1.6,<6"
sphinx-rtd-theme = "^1.1.1"
sphinx-autobuild = "^2021.3.14"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
